set up agora and user media of users

--- a/room.html
+++ b/room.html
@@ -194,5 +194,7 @@
     </main>
     
 </body>
+<script type="text/javascript" src="js/AgoraRTC_N-4.20.1.js"></script>
 <script type="text/javascript" src="js/room.js"></script>
+<script type="text/javascript" src="js/room_RTC.js"></script>
 </html>
