--- a/room.html
+++ b/room.html
@@ -180,6 +180,7 @@
     
 </body>
 <script type="text/javascript" src="js/AgoraRTC_N-4.20.1.js"></script>
+<script type="text/javascript" src="js/agora-rtm-2.1.9.min.js"></script>
 <script type="text/javascript" src="js/room.js"></script>
 <script type="text/javascript" src="js/room_RTC.js"></script>
 </html>
