--- a/room.html
+++ b/room.html
@@ -8,6 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
 
     <link rel='stylesheet' type='text/css' media='screen' href='styles/room.css'>
+
 </head>
 <body>
 
@@ -16,7 +17,7 @@
             <button id="members__button">
                <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M24 18v1h-24v-1h24zm0-6v1h-24v-1h24zm0-6v1h-24v-1h24z" fill="#ede0e0"><path d="M24 19h-24v-1h24v1zm0-6h-24v-1h24v1zm0-6h-24v-1h24v1z"/></svg>
             </button>
-            <a href="lobby.html"/>
+            <a href="lobby.html">
                 <h3 id="logo">
                     <img src="./images/logo.png" alt="Site Logo">
                     <span>MACO</span>
@@ -179,8 +180,9 @@
     </main>
     
 </body>
+<script type="text/javascript" src="js/agora-rtm-sdk-1.4.4.js"></script>
 <script type="text/javascript" src="js/AgoraRTC_N-4.20.1.js"></script>
-<script type="text/javascript" src="js/agora-rtm-2.1.9.min.js"></script>
 <script type="text/javascript" src="js/room.js"></script>
+<script type="text/javascript" src="js/room_RTM.js"></script>
 <script type="text/javascript" src="js/room_RTC.js"></script>
 </html>
