add RTM user joined/left functionality for DOM

--- a/room.html
+++ b/room.html
@@ -48,30 +48,10 @@
             </div>
 
             <div id="member__list">
-                <div class="member__wrapper" id="member__1__wrapper">
+                <!-- <div class="member__wrapper" id="member__1__wrapper">
                     <span class="green__icon"></span>
                     <p class="member_name">Marco</p>
-                </div>
-
-                <div class="member__wrapper" id="member__2__wrapper">
-                    <span class="green__icon"></span>
-                    <p class="member_name">Kian</p>
-                </div>
-
-                <div class="member__wrapper" id="member__1__wrapper">
-                    <span class="green__icon"></span>
-                    <p class="member_name">Joan</p>
-                </div>
-
-                <div class="member__wrapper" id="member__2__wrapper">
-                    <span class="green__icon"></span>
-                    <p class="member_name">Gerald</p>
-                </div>
-
-                <div class="member__wrapper" id="member__2__wrapper">
-                    <span class="green__icon"></span>
-                    <p class="member_name">Harold 👋:</p>
-                </div>
+                </div> -->
             </div>
 
             </section>
