add a realtime messaging on the channel

--- a/room.html
+++ b/room.html
@@ -86,69 +86,12 @@
             <section id="messages__container">
 
                 <div id="messages">
-                    <div class="message__wrapper">
-                        <div class="message__body__bot">
-                            <strong class="message__author__bot">🤖 Maco Bot</strong>
-                            <p class="message__text__bot">Welcome to the room, Don't be shy, say hello!</p>
-                        </div>
-                    </div>
-
-                    <div class="message__wrapper">
-                        <div class="message__body__bot">
-                            <strong class="message__author__bot">🤖 Maco Bot</strong>
-                            <p class="message__text__bot">Marco just entered the room!</p>
-                        </div>
-                    </div>
-                    <div class="message__wrapper">
+                    <!-- <div class="message__wrapper">
                         <div class="message__body__bot">
                             <strong class="message__author__bot">🤖 Mumble Bot</strong>
                             <p class="message__text__bot">Gerald  just entered the room!</p>
                         </div>
-                    </div>
-
-                    <div class="message__wrapper">
-                        <div class="message__body">
-                            <strong class="message__author">Gerald</strong>
-                            <p class="message__text">Does anyone know what is the market price of Bitcoin ?</p>
-                        </div>
-                    </div>
-
-                    <div class="message__wrapper">
-                        <div class="message__body__bot">
-                            <strong class="message__author__bot">🤖 Mumble Bot</strong>
-                            <p class="message__text__bot">Kian  just entered the room!</p>
-                        </div>
-                    </div>
-
-                    <div class="message__wrapper">
-                        <div class="message__body__bot">
-                            <strong class="message__author__bot">🤖 Mumble Bot</strong>
-                            <p class="message__text__bot">Joan  just entered the room!</p>
-                        </div>
-                    </div>
-
-                    <div class="message__wrapper">
-                        <div class="message__body">
-                            <strong class="message__author">Joan</strong>  
-                            <p class="message__text"> Great stream!</p>
-                        </div>
-                    </div>
-
-                    <div class="message__wrapper">
-                        
-                        <div class="message__body">
-                            <strong class="message__author">Gerlad</strong>  
-                            <p class="message__text"> Convert RGB color 
-                                codes to HEX HTML format for use 
-                                in web design and CSS.</p>
-                        </div>
-                    </div>
-                    <div class="message__wrapper">
-                        <div class="message__body__bot">
-                            <strong class="message__author__bot">🤖 Mumble Bot</strong>
-                            <p class="message__text__bot">Harold  just entered the room!</p>
-                        </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <form id="message__form">
